# Atramentum

./: .editorconfig  .env.example  .gitattributes  .gitignore  Makefile  Makefile.mak  README.md  gitattributes.gitattributes  pyproject.toml  requirements.txt  run_complete_workflow.sh  start_production.sh  test_complete.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yaml  lint.yaml
configs/: data_formatter.yaml  dpo_llama3.yaml  logging.yaml  sft_llama3.yaml  sft_mistral.yaml  sft_nous.yaml
docker/: Dockerfile  docker-compose.yml
docs/: index.md  quickstart.md
scripts/: auto_label.py  build_index.py  generate_basic.py  generate_with_rag.py  make_dataset.py  merge_lora.py  serve_api.py  serve_simple.py  train_dpo.py  train_sft.py
src/atramentum/: __init__.py
src/atramentum/data/: formatter.py  validators.py
src/atramentum/inference/: generator.py  prompts.py
src/atramentum/training/: dpo_trainer.py  sft_trainer.py
src/atramentum/utils/: io.py  logging.py  metrics.py
