# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atramentum"
version = "0.1.2"
description = "Self-hosted journal model with archive memory"
readme = "README.md"
authors = [
    {name = "JB", email = "joebachir20@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/Joe-b-20/Atramentum"
Issues = "https://github.com/Joe-b-20/Atramentum/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "B", "I"]
ignore = ["E501"]  # Line too long - let Black handle it

[tool.black]
line-length = 100
target-version = ["py310"]